# empresas_site

./: README.md  data_frame_empresas_site.py  empresas_sites.py  google_search.py  pyproject.toml
dados/: empresas_site.csv  teste.csv
tests/: test_data_frame_empresas_site.py  test_google_search.py
