[project]
name = "empresas-site"
version = "0.1.0"
description = "Busca sites de empresas listadas na base de dados."
authors = [
    {name = "Gilmar",email = "gilmar.jesus@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "google (>=3.0.0,<4.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-mock (>=3.14.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
